--- a/0x00-Webpack/task_1/package.json
+++ b/0x00-Webpack/task_1/package.json
@@ -12,8 +12,7 @@
   "author": "Kwabena Boakye",
   "license": "MIT",
   "devDependencies": {
-    "webpack": "^5.89.0",
-    "webpack-cli": "^5.1.4"
+    "webpack": "^5.89.0"
   },
   "dependencies": {
     "jquery": "^3.7.1",
